 * plugins/dfcdrom/support.h: Likewise.
 * plugins/dfcdrom/main.c: Likewise.
 * plugins/dfcdrom/callbacks.c: Likewise.
 * plugins/dfcdrom/callbacks.h: Likewise.
 * plugins/dfcdrom/cfgCdr.glade: Likewise.
 * plugins/dfcdrom/Makefile.am: Likewise.
 * libpcsxcore/psxbios.c: Fixed MSVC6 errors when psxbios logging is enabled.
 * debian/changelog: Changed version number.

November 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/zh_CN.po, po/zh_TW.po: Updated.

November 13, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/misc.c: Fixed CheckCdrom() and LoadCdrom() so that format like
   "cdrom:\\FILENAME" and "cdrom:/FILENAME" in SYSTEM.CNF can be accepted.
 * libpcsxcore/ix86_64/README: Removed obsolete information.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Changed the include path
   to SCSITaskLib.h for compatibility with Mac OS X 10.6 SDK (Thanks maggix).
 * macosx/English.lproj/PCSX.nib/objects.nib: Added 2 more savestate slots.
 * macosx/English.lproj/PCSX.nib/info.nib: Likewise.

November 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/draw.c: Fixed green edge in YUV mode.

November 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/r3000a.c: Commented out the check for psxRegs.interrupt
   before checking for hardware interrupts, which fixes the issue with I.Q.
   Final (maybe other games too).

November 7, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/draw.c: Don't bail out if the color depth is not set to 32.

November 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/draw.c: Check for centering during blits.

November 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/sio.c: Fixed the format of new memory card file, which solves
   the saving problem with Final Fantasy 6.
 * macosx/EmuThread.h: Added "Run BIOS" menu item.
 * macosx/PcsxController.h: Likewise.
 * macosx/EmuThread.m: Likewise.
 * macosx/PcsxController.m: Likewise.