@@ -17,6 +17,7 @@ November 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>
  * plugins/dfcdrom/Makefile.am: Likewise.
  * libpcsxcore/psxbios.c: Fixed MSVC6 errors when psxbios logging is enabled.
  * debian/changelog: Changed version number.
+ * libpcsxcore/cdriso.c: Added support for reporting current CDDA play time.
 
 November 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
